[package]
name = "silly-png"
description = "embed shellscripts and files into png files!"
version = "1.3.1"
edition = "2021"
license = "CC0-1.0"
homepage = "https://gitlab.com/slonkazoid/silly-png"
repository = "https://gitlab.com/slonkazoid/silly-png"
readme = "README.md"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
divisors = "0.2.1"
png = "0.17.11"

[profile.release]
lto = "thin"
strip = true
